# ekumenlabs_config

./: .gitignore  Makefile  README.md  pyproject.toml
tests/: __init__.py  test_bool_config.py  test_date_config.py  test_float_config.py  test_int_config.py  test_string_config.py
