[tool.poetry]
name = "ekumenlabs_config"
version = "0.1.0"
description = ""
authors = ["Guillermo Manzato <manzato@ekumenlabs.com>"]
license = "MIT"
readme = "README.md"

#homepage = "https://github.com/Ekumen-OS/tortoise-data-migration"
#repository = "https://github.com/Ekumen-OS/tortoise-data-migration"
#documentation = "https://github.com/Ekumen-OS/tortoise-data-migration"

keywords = ["configuration"]

classifiers = [ "Development Status :: 4 - Beta", "Framework :: AsyncIO", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License"]


[tool.poetry.dependencies]
python = "^3.10"
tortoise-orm = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
coverage = "^7.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[flake8]
max-line-length = 88
