[tool.poetry]
name = "ekumenlabs_config"
version = "0.1.2"
description = ""
authors = ["Guillermo Manzato <manzato@ekumenlabs.com>"]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/Ekumen-OS/ekumenlabs_config"
repository = "https://github.com/Ekumen-OS/ekumenlabs_config"
documentation = "https://github.com/Ekumen-OS/ekumenlabs_config"

keywords = ["configuration"]

classifiers = [ "Development Status :: 4 - Beta", "Framework :: AsyncIO", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License"]


[tool.poetry.dependencies]
python = "^3.10"
tortoise-orm = ">=0.19.2,<0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.2"
coverage = "^7.4.3"
versionbump = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[flake8]
max-line-length = 88
